Factory now takes a K in build(), so that things about current run can be passed to built listener.