@@ -1,5 +1,6 @@
 package it.units.malelab.jgea.core.listener;
 
+import it.units.malelab.jgea.core.util.Misc;
 import org.apache.commons.csv.CSVFormat;
 
 import java.io.File;
@@ -10,24 +11,27 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 /**
  * @author eric on 2021/01/03 for jgea
  */
-public class CSVPrinter<E> implements Factory<E> {
+public class CSVPrinter<E, K> implements Factory<E, K> {
 
   private static final Logger L = Logger.getLogger(CSVPrinter.class.getName());
   private static final int FLUSH_N = 10;
 
-  private final List<NamedFunction<? super E, ?>> functions;
+  private final List<NamedFunction<? super E, ?>> eFunctions;
+  private final List<NamedFunction<? super K, ?>> kFunctions;
   private final File file;
 
   private org.apache.commons.csv.CSVPrinter printer;
   private int lineCounter;
 
-  public CSVPrinter(List<NamedFunction<? super E, ?>> functions, File file) {
-    this.functions = functions;
+  public CSVPrinter(
+      List<NamedFunction<? super E, ?>> eFunctions, List<NamedFunction<? super K, ?>> kFunctions, File file
+  ) {
+    this.eFunctions = eFunctions;
+    this.kFunctions = kFunctions;
     this.file = file;
     lineCounter = 0;
   }
@@ -37,13 +41,10 @@ public class CSVPrinter<E> implements Factory<E> {
     while (file.exists()) {
       String newName = null;
       Matcher mNum = Pattern.compile("\\((?<n>[0-9]+)\\)\\.\\w+$").matcher(file.getPath());
-      if (newName == null && mNum.find()) {
+      if (mNum.find()) {
         int n = Integer.parseInt(mNum.group("n"));
-        newName = newName = new StringBuilder(file.getPath()).replace(
-            mNum.start("n"),
-            mNum.end("n"),
-            Integer.toString(n + 1)
-        ).toString();
+        newName = new StringBuilder(file.getPath()).replace(mNum.start("n"), mNum.end("n"), Integer.toString(n + 1))
+            .toString();
       }
       Matcher mExtension = Pattern.compile("\\.\\w+$").matcher(file.getPath());
       if (newName == null && mExtension.find()) {
@@ -68,9 +69,11 @@ public class CSVPrinter<E> implements Factory<E> {
   }
 
   @Override
-  public Listener<E> build() {
+  public Listener<E> build(K k) {
+    List<?> kValues = kFunctions.stream().map(f -> f.apply(k)).toList();
+    List<String> headers = Misc.concat(List.of(kFunctions, eFunctions)).stream().map(NamedFunction::getName).toList();
     return e -> {
-      List<Object> values = functions.stream().map(f -> f.apply(e)).collect(Collectors.toList());
+      List<?> eValues = eFunctions.stream().map(f -> f.apply(e)).toList();
       synchronized (file) {
         if (printer == null) {
           File actualFile = check(file);
@@ -84,7 +87,7 @@ public class CSVPrinter<E> implements Factory<E> {
             return;
           }
           try {
-            printer.printRecord(functions.stream().map(NamedFunction::getName).toList());
+            printer.printRecord(headers);
           } catch (IOException ex) {
             L.warning(String.format("Cannot print header: %s", ex));
             return;
@@ -92,11 +95,11 @@ public class CSVPrinter<E> implements Factory<E> {
           L.info(String.format(
               "File %s created and header for %d columns written",
               actualFile.getPath(),
-              functions.size()
+              eFunctions.size()
           ));
         }
         try {
-          printer.printRecord(values);
+          printer.printRecord(Misc.concat(List.of(kValues, eValues)));
         } catch (IOException ex) {
           L.warning(String.format("Cannot print values: %s", ex));
           return;
